tests/NormalTests/paczka1/fuzzy1/23986004.err
Error in line 1: FNHWOVLwN A131 73,9
Error in line 2: FNHWOVLwN S41 76,1
Error in line 3: FNHWOVLwN A554 28,1
Error in line 13: bmdc S41 48,0
Error in line 19: fheni3Y9hLt S108 78,4
Error in line 20: fheni3Y9hLt A131 68,0
Error in line 23: fheni3Y9hLt A554 85,9
Error in line 25: A554 A131 90,2
Error in line 27: A554 A554 21,9
Error in line 32: Hf7pvU S108 62,7
